# NavaTech-MultiTenant-FastAPI

./: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: main.py  settings.py  utils.py
app/api/auth/: controller.py  error.py  router.py  schema.py  service.py
app/api/organisation/: __init__.py  controller.py  error.py  router.py  schema.py  service.py
app/database/: __init__.py  connection.py
app/models/: base.py  organisation.py  user.py
management/: manage.py
management/commands/: migrate.py
migrations/: __init__.py  env.py  organisation.py  script.py.mako
migrations/versions/: create_org_default_schema__2b118a.py  create_organisations_table__e93964.py  create_shared_schema__f4c612.py  create_user__6fc038.py
